--- a/WebApplicationTravel/Views/Shared/_LoginPage.cshtml
+++ b/WebApplicationTravel/Views/Shared/_LoginPage.cshtml
@@ -45,7 +45,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="copyright">
             <h2>
                 &copy; 2019 Latest Login Form. All rights reserved | Design by
-               Meidan, Shahaf, Guy
+               Meidan, Shahaf, Guy, Eden
             </h2>
         </div>
         <!-- //copyright -->
