--- a/WebApplicationTravel/Views/Reservations/Index.cshtml
+++ b/WebApplicationTravel/Views/Reservations/Index.cshtml
@@ -14,6 +14,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Account.UserName)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Departure)
+        </th> 
         <th></th>
     </tr>
 
@@ -22,6 +25,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.Account.UserName)
         </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Departure)
+        </td>     
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ReservationId }) |
             @Html.ActionLink("Details", "Details", new { id=item.ReservationId }) |
