--- a/WebApplicationTravel/Views/Shared/_MyTemplate.cshtml
+++ b/WebApplicationTravel/Views/Shared/_MyTemplate.cshtml
@@ -15,19 +15,7 @@
     <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
     <meta name="author" content="FREEHTML5.CO" />
 
-    <!--
-      //////////////////////////////////////////////////////
-
-      FREE HTML5 TEMPLATE
-      DESIGNED & DEVELOPED by FREEHTML5.CO
-
-      Website: 		http://freehtml5.co/
-      Email: 			info@freehtml5.co
-      Twitter: 		http://twitter.com/fh5co
-      Facebook: 		https://www.facebook.com/fh5co
-
-      //////////////////////////////////////////////////////
-       -->
+   
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="" />
     <meta property="og:image" content="" />
@@ -62,14 +50,8 @@
 
     <link rel="stylesheet" href="@Url.Content("~/Content/MyTemplate/")css/style.css">
 
-
-    <!-- Modernizr JS -->
     <script src="@Url.Content("~/Content/MyTemplate/")js/modernizr-2.6.2.min.js"></script>
-    <!-- FOR IE9 below -->
-    <!--[if lt IE 9]>
-    <script src="js/respond.min.js"></script>
-    <![endif]-->
-
+    
 </head>
 
 
@@ -83,6 +65,7 @@
                 <nav id="fh5co-menu-wrap" role="navigation">
                     <ul class="sf-menu" id="fh5co-primary-menu">
                         <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Maps", "GoogleMaps", "Home")</li>
                         <li><a href="flight.html">Flights</a></li>
                         <li><a href="car.html">Car</a></li>
                 
