--- a/WebApplicationTravel/Views/Reservations/Profile.cshtml
+++ b/WebApplicationTravel/Views/Reservations/Profile.cshtml
@@ -134,7 +134,7 @@
                                {
                                 <tr>
                                     <td class="cell100 column1">
-                                        @Html.DisplayFor(modelItem => item.AccountId)
+                                        @Html.DisplayFor(modelItem => item.ReservationId)
                                     </td>
                                     <td class="cell100 column1">
                                         @Html.DisplayFor(modelItem => item.Departure)
