--- a/WebApplicationTravel/Views/Reservations/ShowReservation.cshtml
+++ b/WebApplicationTravel/Views/Reservations/ShowReservation.cshtml
@@ -54,7 +54,7 @@
                                 }
                                 <tr>
                                     <td class="cell100 column1">
-                                        <h3>@res.AccountId</h3>
+                                        <h3>@res.ReservationId</h3>
                                     </td>
                                     <td class="cell100 column1">
                                         <h3>@res.Departure</h3>
