--- a/WebApplicationTravel/Views/Cities/Details.cshtml
+++ b/WebApplicationTravel/Views/Cities/Details.cshtml
@@ -44,11 +44,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Coordinate)
+            @Html.DisplayNameFor(model => model.Latitude)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Coordinate)
+            @Html.DisplayFor(model => model.Latitude)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Longitude)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Longitude)
         </dd>
 
     </dl>
